test/SemanticAnalysis/Class/ThisInStaticMethod.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) {
	static void method() {
		// CHECK: .loci:7:3: error: cannot access 'this' in static method
		this->doSomething();
	}
	
	void doSomething() { }
}

// CHECK: 1 error generated.
